2005-06-18  Karl Runge <runge@karlrunge.com>
	* clean up some malloc/free problems (don't free the current cursor)
	* set DISPLAY before calling gconf, dcop under -solid
	* -inetd -q and no -o logfile implies closing stderr.

2005-06-14  Karl Runge <runge@karlrunge.com>
	* -DNOGUI and -DVIEWONLY build options
	* -noskip_dups the default (windows viewer sends no ups when
	  repeating)
	* HAVE_SOLARIS_XREADSCREEN and HAVE_IRIX_XREADDISPLAY
	* Alt+Button+Motion to wireframe.  tunable in WIREFRAME_PARMS
	* copyrect now the default under -scale (works OK, but must
	  send a cleanup update)
	* fix -pedantic and Sun cc warnings and errors (unsigned, etc..)
	* print out fatal error messages under -quiet
	* -seldir to control and debug selection transfers.
	* fix crashes on 64bit wrt unsigned long in rich cursors.
	* fix kde guessing errors
	* more scrolling and wireframe tweaks.

2005-06-03  Karl Runge <runge@karlrunge.com>
	* make scrollcopyrect more or less usable under -scale
	* add -fixscreen for periodic cleanup of painting errors.
	* adjust keyrepeat scroll behavior.

2005-05-30  Karl Runge <runge@karlrunge.com>
	* alter "magic cleanup key sequences" (N*Alt_L and N*Super_L)
	* dial down check_xrecord_reset() reset times.

2005-05-24  Karl Runge <runge@karlrunge.com>
	* more -scrollcopyrect: GrabServer detection, autorepeat throttling,
	  hack to clean screen 3,4,5 Alt_L in a row, mouse wheel detect.
	* fix bug wrt switching to single_copytile, add Darwin to shm limit.

2005-05-17  Karl Runge <runge@karlrunge.com>
	* more -scrollcopyrect, -scr_term hacks for terminals.
	* -wait_ui, -nowait_bog tunables.  push cursor sooner.

2005-05-14  Karl Runge <runge@karlrunge.com>
	* much more work on  "-scrollcopyrect" mode... getting usable.
	* remove -pointer_mode 3, shift everyone back down
	* -dbg "crash shell" for debugging
	* -add_keysyms now the default, periodically clears if needed.
	* try to autodetect if -xkb would be a good idea.