@@ -2,7 +2,7 @@
 .TH X11VNC "1" "June 2005" "x11vnc " "User Commands"
 .SH NAME
 x11vnc - allow VNC connections to real X11 displays
-         version: 0.7.2, lastmod: 2005-06-18
+         version: 0.7.2, lastmod: 2005-06-21
 .SH SYNOPSIS
 .B x11vnc
 [OPTION]...
